# proto-definitions

./: .dockerignore  .env  .gitmodules  .service  Cargo.toml  Dockerfile  README.md  build.rs  codeg.proto  docker-compose.yml  log.proto  minioc.proto  pm2.config.js  query.proto  tenantm.proto
messenger/: messenger.proto
proto/: messenger.proto  parquetb.proto  tenantm.proto  transformer.proto
proto/log/: log.proto
proto/matcher/: matching.proto
src/: lib.rs
