[package]
name = "proto-definitions"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
prost = "0.13.3"
prost-types = "0.13.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
tonic = "0.12.2"
tonic-build = "0.12.3"
tonic-reflection = "0.12.2"

[build-dependencies]
tonic-build = "0.12.2"
